# agentic-dao-visier

./: LICENSE  README.md  lib.rs
agentic-dao-visier/: .graphclientrc.yml  example-query.graphql  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
agentic-dao-visier/.graphclient/: index.ts  persisted_operations.json  schema.graphql
agentic-dao-visier/pages/api/: actions.ts  get_proposal.ts  get_review.ts  nillion_jwt.ts  proposal_description.ts  proposal_report.ts  review_description.ts  submit_proposal.ts  verify_review.ts
agentic-dao-visier/scripts/: submit_proposal.js
agentic-dao-visier/src/app/: Providers.tsx  layout.tsx  page.tsx  types.ts
doalens-sentinel/: networks.json  package.json  schema.graphql  subgraph.yaml
doalens-sentinel/tests/: contract-utils.ts
examples/: investment in startup example.md  sample research and report.md
stylus-dao/: Cargo.toml
stylus-dao/dao-contract/abi/: contractabi.json
stylus-dao/dao-contract/agentic-test/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
stylus-dao/dao-contract/dao-sentinel/: package.json  schema.graphql
stylus-dao/dao-contract/daolens/: networks.json  package-lock.json  package.json  schema.graphql  (+1 more)
stylus-dao/dao-contract/daolens-sentinel/: networks.json  package.json  subgraph.yaml
stylus-dao/dao-contract/daolens-subgraph/: networks.json  package.json  subgraph.yaml
stylus-dao/dao-token/: Cargo.toml
stylus-dao/dao-token/src/: erc20.rs  lib.rs  main.rs
stylus-dao/src/: erc20.rs  lib.rs  main.rs
stylus-dao/tests/: contractUnitTests.rs
(+82 files in other folders)
