[package]
name = "stylus-token"
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus DAO governance token"

[dependencies]
alloy-primitives = "=0.8.14"
alloy-sol-types = "=0.8.14"
mini-alloc = "0.7.0"
stylus-sdk = "0.7.0"
hashbrown = "0.15.2"
hex = "0.4.3"
dotenv = "0.15.0"
sha3 = "0.10.8"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
motsu = "0.3.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-token"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
